[tool.poetry]
name = "esphome-plus"
version = "0.1.0"
description = ""
authors = ["Subhash Chandra <TMaYaD@LoonyB.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
esphome = "^2023.10.3"

[tool.poetry.scripts]
esphome-plus = 'esphome_plus.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
