[tool.poetry]
name = "esphome-plus"
version = "0.1.0"
description = ""
authors = ["Subhash Chandra <TMaYaD@LoonyB.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
esphome = "^2025.3.3"
deepdiff = "^8.4.2"
icdiff = "^2.0.7"

[tool.poetry.extras]
pretty-diffs = ["icdiff"]

[tool.poetry.scripts]
esphome-plus = 'esphome_plus:cli'

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
