[tool.poetry]
name = "esphome-plus"
version = "0.1.0"
description = ""
authors = ["Subhash Chandra <TMaYaD@LoonyB.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
click = "^8.1.7"
esphome = "^2026.7.2"
deepdiff = "^9.0.0"
icdiff = "^2.0.10"

[tool.poetry.extras]
pretty-diffs = ["icdiff"]

[tool.poetry.scripts]
esphome-plus = 'esphome_plus:cli'

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
